--- a/config/peerpods/podvm/libvirt-podvm-image-cm.yaml
+++ b/config/peerpods/podvm/libvirt-podvm-image-cm.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: openshift-sandboxed-containers-operator
 data:
   HPCC_PODVM_IMAGE: "quay.io/ajvictor/podvm-libvirt-rhel-s390x"
-  ENABLE_HP: true
+  ENABLE_HP: "true"
 
