Introducing operator builds for podvm image for libvirt hpcc specific scenario.
Signed-off-by: Ajay Victor <avictor@redhat.com>

--- a/config/peerpods/peerpodssecret.yaml
+++ b/config/peerpods/peerpodssecret.yaml
@@ -5,7 +5,10 @@ metadata:
   namespace: openshift-sandboxed-containers-operator
 type: Opaque
 stringData:
-  #CLOUD_PROVIDER: "libvirt"
-  #LIBVIRT_URI: "qemu+ssh://root@192.168.122.1/system?no_verify=1"
-  #LIBVIRT_NET: "default
-  #LIBVIRT_POOL: "default"
+  # CLOUD_PROVIDER: "libvirt"
+  # LIBVIRT_URI: "qemu+ssh://root@192.168.122.1/system?no_verify=1"
+  # LIBVIRT_NET: "default
+  # LIBVIRT_POOL: "default"
+  # LIBVIRT_IMAGE_TYPE: "pre-built" // "pre-built" can be any image.
+  # LIBVIRT_IMAGE_SOURCE: "icr.io/coco/hpcc:v1" 
+  # LIBVIRT_PODVM_IMAGE_PATH: "/image/libvirt-coco.qcow2"
