--- a/config/peerpods/podvm/osc-podvm-upload-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-upload-job.yaml
@@ -1,27 +1,29 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: hpcc-podvm-image-upload
+  name: podvm-image-upload
   namespace: openshift-sandboxed-containers-operator
 spec:
   template:
     metadata:
-      name: hpcc-podvm-image-upload
+      name: podvm-image-upload
     spec:
       containers:
         - name: upload
-          image: quay.io/ajvictor/podvm-libvirt-upload:v2
+          image: quay.io/ajvictor/podvm-libvirt-upload:v3
           command: ["/bin/sh", "-c"]
           args:
             - |
+              echo "Checksum"
+              sha256sum $PODVM_IMAGE_PATH
               echo "Starting to upload the image."
               echo $LIBVIRT_VOL_NAME && echo $LIBVIRT_POOL && echo $LIBVIRT_URI && echo $PODVM_IMAGE_PATH
               virsh -d 0 -c $LIBVIRT_URI vol-upload --vol $LIBVIRT_VOL_NAME $PODVM_IMAGE_PATH --pool $LIBVIRT_POOL --sparse
               echo "Uploaded the image successfully"
               # Update peer-pods-cm configmap with the libvirt pool uuid.
-              LIBVIRT_POOL_UUID=$(virsh pool-list --name --uuid | grep $LIBVIRT_POOL | awk '{print $1}')
+              LIBVIRT_POOL_UUID=$(virsh -d 0 -c $LIBVIRT_URI pool-list --name --uuid | grep $LIBVIRT_POOL | awk '{print $1}')
               echo "Updating peer-pods-cm configmap with IMAGE_ID=${LIBVIRT_POOL_UUID}"
-              kubectl patch configmap peer-pods-cm -n openshift-sandboxed-containers-operator --type merge -p "{\"data\":{\"LIBVIRT_POOL_UUID\":\"${LIBVIRT_POOL_UUID}\"}}"
+              kubectl patch configmap peer-pods-cm -n openshift-sandboxed-containers-operator --type merge -p "{\"data\":{\"LIBVIRT_POOL_UUID\":\"${LIBVIRT_POOL_UUID}-hyperprotect\"}}"
           envFrom:
             - secretRef:
                 name: peer-pods-secret
