--- a/config/peerpods/podvm/osc-podvm-create-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-create-job.yaml
@@ -13,9 +13,11 @@ spec:
     spec:
       # Add initContainers to pull the image from the registry and copy
       # /podvm-binaries.tar.gz /payload/podvm-binaries.tar.gz
+      imagePullSecrets:
+        - name: regcred
       initContainers:
         - name: copy
-          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-payload-rhel9:1.7.0
+          image: quay.io/suprit_iti/openshift-sandboxed-containers/osc-podvm-payload-rhel9:latest
           command: ["/bin/sh", "-c"]
           args:
             - |
@@ -29,12 +31,11 @@ spec:
         - name: create
           # Binaries like kubectl, packer and yq are expected to be under /usr/local/bin
           # podvm binaries are expected to be under /payload/podvm-binaries.tar.gz
-          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-builder-rhel9:1.7.0
+          image: quay.io/suprit_iti/openshift-sandboxed-containers/osc-podvm-builder-rhel9:testv29
           # This image contains the following
           # azure-podvm-image-handler.sh script under /scripts/azure-podvm-image-handler.sh
           # aws-podvm-image-handler.sh script under /scripts/aws-podvm-image-handler.sh
           # sources for cloud-api-adaptor under /src/cloud-api-adaptor
-
           securityContext:
             runAsUser: 0 # needed for container mode dnf access
           envFrom:
@@ -49,11 +50,45 @@ spec:
             - configMapRef:
                 name: aws-podvm-image-cm
                 optional: true
+            - configMapRef:
+                name: libvirt-podvm-image-cm
+                optional: true
+            - secretRef:
+                name: peer-pods-secret
+                valueFrom:
+                  secretKeyRef:
+                    key: LIBVIRT_URI
+                    name: LIBVIRT_URI
+                optional: true
+            - secretRef:
+                name: peer-pods-secret
+                valueFrom:
+                  secretKeyRef:
+                    key: LIBVIRT_VOL_NAME
+                    name: LIBVIRT_VOL_NAME
+                optional: true
+            - secretRef:
+                name: peer-pods-secret
+                valueFrom:
+                  secretKeyRef:
+                    key: LIBVIRT_POOL
+                    name: LIBVIRT_POOL
+                optional: true
           command: ["/podvm-builder.sh", "create"]
           volumeMounts:
             - name: payload
               mountPath: /payload
+            - mountPath: "/root/.ssh/"
+              name: ssh-key-secret
+              readOnly: true
       volumes:
         - name: payload
           emptyDir: {}
+        - name: ssh-key-secret
+          secret:
+            secretName: ssh-key-secret
+            items:
+            - key: id_rsa
+              path: "id_rsa"
+            defaultMode: 0400
       restartPolicy: Never
