--- a/config/peerpods/podvm/osc-podvm-create-job.yaml
+++ b/config/peerpods/podvm/osc-podvm-create-job.yaml
@@ -17,13 +17,16 @@ spec:
         - name: regcred
       initContainers:
         - name: copy
-          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-payload-rhel9:1.7.0
+          image: quay.io/suprit_iti/confidential-containers/podvm-binaries-rhel-s390x:sup-v1
           command: ["/bin/sh", "-c"]
           args:
             - |
               echo "Copying the payload files"
               cp /podvm-binaries.tar.gz /payload/podvm-binaries.tar.gz || exit 1
               echo "Copied the payload files successfully"
+              echo "Copying the pause bundle files"
+              cp /pause-bundle.tar.gz /payload/pause-bundle.tar.gz || exit 1
+              echo "Copied the pause bundle files successfully"
           volumeMounts:
             - name: payload
               mountPath: /payload
@@ -31,7 +34,7 @@ spec:
         - name: create
           # Binaries like kubectl, packer and yq are expected to be under /usr/local/bin
           # podvm binaries are expected to be under /payload/podvm-binaries.tar.gz
-          image: registry.redhat.io/openshift-sandboxed-containers/osc-podvm-builder-rhel9:1.7.0
+          image: quay.io/suprit_iti/openshift-sandboxed-containers/osc-podvm-builder-rhel9:test-new-job-3
           # This image contains the following
           # azure-podvm-image-handler.sh script under /scripts/azure-podvm-image-handler.sh
           # aws-podvm-image-handler.sh script under /scripts/aws-podvm-image-handler.sh
@@ -53,43 +56,17 @@ spec:
             - configMapRef:
                 name: libvirt-podvm-image-cm
                 optional: true
-            - secretRef:
-                name: peer-pods-secret
-                valueFrom:
-                  secretKeyRef:
-                    key: LIBVIRT_URI
-                    name: LIBVIRT_URI
-                optional: true
-            - secretRef:
-                name: peer-pods-secret
-                valueFrom:
-                  secretKeyRef:
-                    key: LIBVIRT_VOL_NAME
-                    name: LIBVIRT_VOL_NAME
-                optional: true
-            - secretRef:
-                name: peer-pods-secret
-                valueFrom:
-                  secretKeyRef:
-                    key: LIBVIRT_POOL
-                    name: LIBVIRT_POOL
-                optional: true
           command: ["/podvm-builder.sh", "create"]
           volumeMounts:
             - name: payload
-              mountPath: /payload
-            - name: regauth
-              mountPath: /tmp/regauth
+              mountPath: /payload          
             - name: ssh-key-secret
               mountPath: "/root/.ssh/"
               readOnly: true
-              optional: true
+              optional: true             
       volumes:
         - name: payload
           emptyDir: {}
-        - name: regauth
-          secret:
-            secretName: auth-json-secret
         - name: ssh-key-secret
           secret:
             secretName: ssh-key-secret
@@ -97,5 +74,4 @@ spec:
             - key: id_rsa
               path: "id_rsa"
             defaultMode: 0400
-          optional: true
       restartPolicy: Never
