Enabling pre-built OCI PodVM image support for libvirt provider
Enabling support for pulling podvm images embedded to an OCI image for libvirt provider via Job

Fixes: KATA-2987

Signed-off-by: Ajay Victor <avictor@redhat.com>

--- a/config/peerpods/podvm/libvirt-podvm-image-cm.yaml
+++ b/config/peerpods/podvm/libvirt-podvm-image-cm.yaml
@@ -25,4 +25,8 @@ data:
 
   # To Enable SE for IBM Z
   SE_BOOT: "true"
-  
+
+  # For Pre-built PodVM images.
+  LIBVIRT_IMAGE_TYPE: "pre-built"
+  LIBVIRT_IMAGE_SOURCE: "quay.io/openshift_sandboxed_containers/libvirt-podvm-image:latest"
+  LIBVIRT_PODVM_IMAGE_PATH: "/image/podvm-s390x.qcow2"
